--- a/code/src/index.css
+++ b/code/src/index.css
@@ -17,40 +17,62 @@ code {
 
 .container {
 	padding: 15px 25px;
-
-	display: grid;
-	grid-template-columns: 1fr;
+	display: flex;
+	align-items: center;
 	justify-content: center;
 	background-color: rgb(255, 255, 255);
 	
+	
 }
+
+.ContainerData{
+width: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+
+}
+
+
+/* Container over post and masage */
+
+
+.messageContainer {
+	display: flex;
+	align-items: center;
+	justify-items: center;
+	flex-direction: column;
+width: 100%;
+	
+	
+	
+}
+
+
 
 
 
 /* Make a post area */
 
 
-.messageContainer {
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: auto;
-	grid-gap: 25px;
-	align-items: center;
-	justify-items: center;
-	width: 100%;
-	
-}
+
+
+
+
+
+
 
 .contentTextArea {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
-
+	margin-bottom: 25px;
 	background-color: rgb(242, 240, 240);
 	border: rgb(0, 0, 0) 1px solid;
 	border-radius: 1%;
 	box-shadow: 12px 12px 1px -5px black;
-	width: 95%;
+	width: 100%;
 	max-width: 450px;
 	height: 140px;
 	white-space: normal;
@@ -143,33 +165,33 @@ align-items: center;
 /* Message container  */
 
 
-
 .content {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
+	justify-content: space-evenly;
+
+	margin-bottom: 25px;
+	background-color: rgb(242, 240, 240);
 	border: rgb(0, 0, 0) 1px solid;
+	border-radius: 1%;
 	box-shadow: 12px 12px 1px -5px black;
-	width: 95%;
+	width: 100%;
 	max-width: 450px;
-	height: 130px;
-	padding: 0px 15px 15px 15px;
-	margin-top: 25px;
-	color: #37352f;
-	
-
-
+	height: 140px;
+	white-space: normal;
+	word-break: normal;
+	padding: 10px 15px;
+	font-size: 15px;
+	font-weight: 700;
 }
 
 /* Text-box message */
 
 
 .TextPost{
-width: 100%;
+	
 height: 70%;
 margin-bottom: 5px;
-padding: 10px 0;
 word-break: normal;
 	line-break:normal;
 	overflow: hidden;
