--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,20 +1,16 @@
 body {
   margin: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Roboto Mono";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Roboto Mono", monospace;
 }
 
-.p {
-  font-size: 11px;
-  margin: 0;
+.form-title {
+  font-size: 10px;
 }
 
 .h3 {
@@ -23,8 +19,9 @@ code {
 
 /* send thought btn*/
 .send-btn {
+  margin-top: 10px;
   border-radius: 50%;
-  width: 50%;
+  width: 55%;
   height: 40px;
   display: block;
   border-radius: 3em;
@@ -33,25 +30,21 @@ code {
   background-color: rgb(255, 173, 173);
   text-align: center;
   font-size: 10px;
+  /* font-family: "Roboto Mono"; */
 }
 /* red hearts in send thought btn*/
 .send-heart {
   color: rgb(255, 64, 50);
+
   margin-right: 5px;
   margin-left: 5px;
 }
 
 .textarea {
-  width: auto;
-  color: aqua;
-}
-
-.input {
-  color: red;
-  width: 90%;
+  width: 95%;
   height: 40px;
-  border-color: rgb(207, 207, 207);
-  border: 4px;
+  /* border-color: rgb(207, 207, 207); */
+  border: 1px solid rgb(207, 207, 207);
 }
 
 button {
@@ -78,12 +71,10 @@ button {
   align-items: left;
   flex-direction: column;
   width: 300px;
-  height: 180px;
+  height: 165px;
   background-color: rgb(242, 240, 240);
-  /* padding: 1rem 1rem 1 rem 1 rem; */
   border: 1px solid rgb(2, 2, 2);
   box-shadow: 7px 7px rgb(2, 2, 2);
-
   border-radius: 2px;
   margin-bottom: 1.5rem;
 }
