--- a/code/src/index.css
+++ b/code/src/index.css
@@ -15,3 +15,39 @@ code {
 .date {
   font-style: italic;
 }
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-content: center; */
+  align-items: center;
+  margin: 25px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  border: solid 3px black;
+  padding: 20px;
+  box-shadow: 5px 5px;
+}
+
+.new-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  grid-gap: 20px;
+  margin-top: 20px;
+  max-width: 400px;
+}
+
+.new-thoughts-card {
+  /* display: flex;
+  flex-direction: column; */
+  border: solid 3px black;
+  padding: 20px;
+  box-shadow: 5px 5px;
+}
