--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,7 +1,7 @@
 body {
-  margin: 15px;
   font-family: 'Roboto', sans-serif;
   font-family: 'Roboto Mono', monospace;
+  background-image: url('./assets/background-img.jpeg');
 }
 
 h1 {
@@ -12,6 +12,7 @@ h1 {
 }
 
 .thoughts-container {
+  margin: 15px;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -20,11 +21,11 @@ h1 {
 
 .form-container {
   box-sizing: border-box;
-  background-color: rgb(243, 243, 243, 0.81);
+  background-color: rgb(202, 208, 180, 0.81);
   border: 2px solid black;
   box-shadow: 5px 5px;
   padding: 10px 14px;
-  height: 160px;
+  height: 180px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
@@ -32,6 +33,7 @@ h1 {
   font-weight: 500;
   font-size: 14px;
   width: 90%;
+  max-width: 550px;
 }
 
 .text-input {
@@ -39,13 +41,19 @@ h1 {
   resize: none;
 }
 
+.btn-counter-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .share-button {
-  background-color: rgb(223, 105, 64, 0.49);
+  background-color: rgb(223, 105, 64, 0.95);
   font-family: 'Roboto';
   font-weight: 600;
-  font-size: 13px;
+  font-size: 12px;
   padding: 7px 5px;
-  width: 180px;
+  width: 170px;
   border: 0px;
   border-radius: 35px;
   cursor: pointer;
@@ -55,6 +63,10 @@ h1 {
   justify-content: space-around;
 }
 
+.share-button:hover {
+  background-color: rgba(214, 86, 43, 0.49);
+}
+
 .btn-heart {
   width: 22px;
   height: 22px;
@@ -62,10 +74,21 @@ h1 {
   justify-content: center;
 }
 
+.char-text {
+  text-align: end;
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.char-text-red {
+  color: red;
+}
+
 .thought-cards-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  align-items: center;
   width: 90%;
   gap: 25px;
 }
@@ -80,12 +103,14 @@ h1 {
   flex-direction: column;
   justify-content: space-around;
   width: 100%;
+  max-width: 550px;
   /* breaks a long line of text that does not hav any spacing */
   white-space: pre-wrap; /* CSS3 */
   white-space: -moz-pre-wrap; /* Firefox */
   white-space: -pre-wrap; /* Opera <7 */
   white-space: -o-pre-wrap; /* Opera 7 */
   word-wrap: break-word; /* IE */
+  background-color: rgb(249, 249, 222, 0.93);
 }
 
 .thought-card-info {
@@ -111,15 +136,17 @@ h1 {
   height: 40px;
   width: 40px;
   border-radius: 50%;
-  background-color: rgb(239, 239, 239);
+  background-color: #c6c4a7;
   cursor: pointer;
+}
+
+.like-button:hover {
+  background-color: #ebad1ad1;
 }
 
 .like-heart {
   height: 22px;
   width: 22px;
-  /* display: flex;
-  justify-content: center; */
 }
 
 .thought-card-info > p,
@@ -162,10 +189,15 @@ h1 {
 }
 
 @media (min-width: 768px) {
+  .form-container {
+    max-width: 900px;
+  }
+
   .thought-cards-container {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    max-width: 900px;
   }
 
   .thought-card {
