--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  font-family: Consolas;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -15,14 +16,14 @@ code {
 /* All post containers  */
 .post-container {
   width: 80%;
-  height: 100px;
+  height: 175px;
   margin: 20px auto;
-  padding: 30px;
+  padding: 10px 30px;
   border: 2px solid black;
   display: flex;
   flex-direction: column;
   box-shadow: 5px 5px black;
-  /* font-family: ; */
+  position: relative;
 }
 
 /* Form, new post */
@@ -35,7 +36,6 @@ code {
 }
 
 #newThought {
-  font-family: Consolas;
   padding: 10px;
   border: 1.5px solid #c8c7c7;
 }
@@ -47,6 +47,15 @@ code {
   border-radius: 25px;
   border: none;
   background-color: #ffadad;
+  font-family: Consolas;
+  position: absolute;
+  bottom: 20px;
+}
+
+.like-div {
+  position: absolute;
+  bottom: 15px;
+  color: #c8c7c7;
 }
 
 .heart-button {
@@ -57,6 +66,26 @@ code {
   border: none;
 }
 
-.date {
-  font-style: italic;
+
+.heart-button:hover, .heart-button:active {
+  background-color: #ffadad;
+}
+
+.post-container .date {
+  color: #c8c7c7;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+
+@media (min-width: 768px) {
+  .post-container {
+    width: 60%;
+  }
+}
+
+@media (min-width: 1023px) {
+  .post-container {
+    width: 30%;
+  }
 }
