--- a/code/src/index.css
+++ b/code/src/index.css
@@ -53,45 +53,60 @@ code {
 }
 
 .submit-button {
-width: 50%;
-height: 67px;
-margin: 20px auto 25px 25px;
-border-radius: 40px;
-background-color: #FDAEAD;
-border:none;
-align-items: center;
+  width: 50%;
+  height: 67px;
+  margin: 20px auto 25px 25px;
+  border-radius: 40px;
+  background-color: #FDAEAD;
+  border:none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 
 }
 .send-wrapper {
-  align-items: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 .send-happy {
-  margin: 0 15px;
+  padding: 0 15px;
   font-size: 16px;
   font-weight: 600;
+  margin-top: 10px;
 }
+.send-wrapper img {
+  width: 40px;
+}
+
 /*New thought*/
 
+.displayed-message{
+  height: 60px;
+  margin-bottom: 30px;
+}
 .thought-message {
-  margin: 70px 25px;
+  margin: 70px 35px;
   font-size: 20px;
-  line-height: 20px;
+  line-height: 25px;
   font-family: 'Roboto Mono', monospace;
+  font-weight: bold;
 }
 .button-row{
   display: flex;
   flex-direction: row;
   width: 100%;
   align-items: center;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 .heart-button-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 80%;
-}
-.send-wrapper img {
-  width: 40px;
+  width: 75%;
+  
 }
 
 .heart-button{
@@ -104,8 +119,12 @@ align-items: center;
   cursor: pointer;
  
 }
+
 .heart-button img {
   width: 40px;
+}
+.heart-button:active{
+  background-color: #FDAEAD;
 }
 .date {
   display: inline;
