--- a/code/src/components/form.css
+++ b/code/src/components/form.css
@@ -1,7 +1,7 @@
 .form {
     margin: 20px auto;
     border: 2px solid black;
-    width: 500px;
+    width: 350px;
     box-shadow: 5px 5px;
     padding: 20px;
     background-color: white;
@@ -13,6 +13,7 @@
 .form-title {
     margin-top: 0;
     font-weight: 700;
+    font-size: 24px;
 }
 
 .form-button {
@@ -30,8 +31,16 @@
 textarea {
     font-size: 17px;
     font-family: 'Trispace', sans-serif;
-    width: 470px;
+    width: 100%;
     height: 80px;
     max-width: 470px;
     max-height: 150px;
+}
+
+/* MEDIA QUERIES */ 
+
+@media(min-width:1024px) {
+    .form {
+        width: 500px;
+    }
 }
