--- a/code/src/index.css
+++ b/code/src/index.css
@@ -17,5 +17,127 @@ code {
   font-style: italic;
 }
 
+.thought-card {
+  margin: 20px auto;
+  border: 2px solid black;
+  width: 350px;
+  box-shadow: 5px 5px;
+  padding: 20px;
+  word-wrap: break-word;
+  background-color: white;
+}
+
+.likes-button {
+  margin-top: 10px;
+  width: 70px;
+  background-color: #ffadad;
+  border: none;
+  padding: 10px;
+  border-radius: 30px;
+  font-family: 'Trispace', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.likes-button:hover {
+  width: 80px;
+  transform: scale(1.07);
+}
+
+/* MEDIA QUERIES */ 
+
+@media(min-width:1024px) {
+  .thought-card {
+      width: 500px;
+  }
+}
+
+.form {
+  margin: 20px auto;
+  border: 2px solid black;
+  width: 350px;
+  box-shadow: 5px 5px;
+  padding: 20px;
+  background-color: white;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.form-title {
+  margin-top: 0;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.form-button {
+  margin-top: 10px;
+  width: 200px;
+  background-color: #ffadad;
+  border: none;
+  padding: 10px;
+  border-radius: 30px;
+  font-family: 'Trispace', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+textarea {
+  font-size: 17px;
+  font-family: 'Trispace', sans-serif;
+  width: 100%;
+  height: 80px;
+  max-width: 470px;
+  max-height: 150px;
+}
+
+/* MEDIA QUERIES */ 
+
+@media(min-width:1024px) {
+  .form {
+      width: 500px;
+  }
+}
+
+.button-container {
+  margin: 20px auto;
+  border: 2px solid black;
+  width: 350px;
+  box-shadow: 5px 5px;
+  padding: 20px;
+  background-color: white;
+
+  display: flex;
+  justify-content: space-around;
+}
+
+button {
+  margin-top: 10px;
+  width: 160px;
+  background-color: #ffadad;
+  border: none;
+  padding: 10px;
+  border-radius: 30px;
+  font-family: 'Trispace', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  box-shadow: 5px 5px;
+}
+
+/* MEDIA QUERIES */ 
+
+@media(min-width:1024px) {
+  .button-container {
+      width: 500px;
+  }
+
+  button {
+      width: 200px;
+  }
+}
+
 
 
