--- a/code/src/index.css
+++ b/code/src/index.css
@@ -22,14 +22,8 @@ code {
 }
 
 .container {
-  width: 350px;
+  width: 280px;
   margin: 0 auto;
-}
-
-.date {
-  grid-column: span 9;
-  margin-inline-end: 0;
-  color: #999999;
 }
 
 .loading-overlay {
@@ -81,6 +75,7 @@ code {
 
 .newThought {
   width: 97%;
+  margin-top: 5px;
   height: 40px;
   box-sizing: content-box;
   outline: none;
@@ -105,14 +100,6 @@ code {
 }
 
 /* message styling */
-.like-container {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  align-items: center;
-  justify-items: end;
-  width: 100%;
-}
-
 .thought-item {
   display: flex;
   flex-direction: column;
@@ -126,20 +113,31 @@ code {
   word-break: break-word;
   min-height: 100px;
 }
-
-/* .message {
-  word-wrap: break-word;
-} */
-
-.likes, .date {
-  font-size: 14px;
+.like-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  align-items: center;
+  /* justify-items: end; */
+  width: 100%;
 }
 
 .likes {
-  margin-inline-end: 10px;
-  grid-column: span 2;
+  margin-inline-start: 8px;
   color: #727171;
   font-weight: bold;
+  grid-column: span 3;
+}
+
+.date {
+  display: grid;
+  justify-items: end;
+  grid-column: span 8;
+  margin-inline-end: 0;
+  color: #999999;
+}
+
+.likes, .date {
+  font-size: 14px;
 }
 
 .like-btn {
@@ -147,20 +145,29 @@ code {
   justify-content: center;
   align-items: center;
   font-family: inherit;
-  font-size: 24px;
+  font-size: 14px;
   border: 1px solid transparent;
   background-color: rgb(233, 231, 231);
-  height: 50px;
-  width: 50px;
+  height: 30px;
+  width: 30px;
   border-radius: 50%;
   color: red;
   font-weight: 700;
   cursor: pointer;
-  /* background: #DB398D;
-  color: #fff */
+}
+
+.like-btn-loved {
+  background: #DB398D;
+  color: #fff
 }
 
 /* styling for tablet and desktop */
+
+@media only screen and (min-width: 360px) {
+  .container {
+    width: 320px;
+  }
+}
 
 @media only screen and (min-width: 768px) {
   body {
@@ -169,16 +176,13 @@ code {
   .container {
     width: 500px;
   }
-  .date {
-    grid-column: span 10;
+   .likes {
+    margin-inline-start: 0;
   }
   .happy-form {
     font-size: 16px;
   }
   .send-btn {
     padding: 10px 20px;
-  }
-  .likes {
-    grid-column: span 1;
   }
 }
