--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,17 +24,9 @@
 
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
 
 fieldset {
   border: 8px solid var(--fieldset-border-color);
@@ -78,28 +70,12 @@ h1 {
   word-break: break-word;
 }
 
-/* .post-a-thought-container {
-  margin-bottom: 48px;
-} */
-
 .post-a-thought-container h2 {
   font-size: 20px;
 }
 
-/* .post-a-thought-container input {
-  font-family: 'Courier New';
-  width: 100%;
-  height: 100px;
-  padding: 10px 10px 50px 10px;
-  font-size: 16px;
-  font-weight: 700;
-  display: flex;
-  flex-flow: row wrap;
-} */
-
-/* disable the resizing of textarea */
 textarea {
-  resize: none;
+  resize: none; /* disable the resizing of textarea */
   border: 2px solid var(--textarea-border-color);
   width: 100%;
   height: 62px;
@@ -183,10 +159,24 @@ textarea:valid {
 footer {
   margin: 12px;
   font-size: 16px;
+  display: inline-block;
 }
 
 footer p {
   margin: 0;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+footer a:visited {
+  color: var(--valid-text-color);
+}
+
+footer a:hover {
+  cursor: pointer;
+  font-weight: 700;
 }
 
 .loading-spinner {
@@ -276,9 +266,6 @@ footer p {
     width: 96%;
     box-shadow: 5px 5px var(--box-shadow-color);
   }
-  /* .post-a-thought-container {
-    margin-bottom: 14px;
-  } */
   .post-a-thought-container h2 {
     font-size: 18px;
   }
@@ -295,9 +282,6 @@ footer p {
   .heart-timestamp-container {
     font-size: 14px;
   }
-  /* .heart-emoji {
-    padding: 8px 12px 8px 12px;
-  } */
   footer {
     font-size: 14px;
   }
