--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,14 +1,13 @@
 :root {
   --primary: #ffffff;
   --secondary: #f3b1af;
-  --tertiary: #c7c7c7;
+  --tertiary: #f2f0f0;
   --fourth: #333;
 }
 
 body {
   margin: 0;
   font-family: "Trispace", sans-serif;
-  /* font-size: 1vw; */
   font-weight: bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -35,7 +34,7 @@ main {
 
 .form,
 .messages {
-  background: #f2f0f0;
+  background: var(--tertiary);
   border: 1px solid #000;
   padding: 10px;
   box-shadow: 7px 7px #000;
@@ -45,11 +44,12 @@ main {
 
 .messages {
   margin: 20px;
+  background-color: var(--primary);
 }
 
 .thoughts-container {
   align-items: center;
-  width: 80%;
+  width: 400px;
   margin: 20px;
 }
 
@@ -70,6 +70,8 @@ main {
 .new-message {
   resize: none;
   line-height: 1.5em;
+  width: 100%;
+  height: 80px;
 }
 
 .send-button {
@@ -85,13 +87,34 @@ main {
 }
 
 .like-button {
+  display: flex;
   cursor: pointer;
+  border-radius: 50%;
+  border: none;
+  transition: all 0.2s ease;
+  height: 40px;
+  width: 40px;
+  justify-content: center;
+  align-items: center;
+}
+
+.like-button:hover {
+  transform: scale(1.1);
+}
+
+.like-button-clicked {
+  background-color: var(--secondary);
+}
+
+.like {
+  display: flex;
+  align-items: center;
 }
 
 .date {
   display: flex;
   justify-content: end;
-  color: var(--tertiary);
+  color: grey;
 }
 
 .loading-overlay {
@@ -110,7 +133,7 @@ main {
   width: 50px;
   height: 50px;
   border: 5px solid #dcdcdc;
-  border-radius: 50%;
+  border-radius: 30%;
   border-left: 5px solid #fff;
   animation: spinner infinite 0.5s;
 }
@@ -125,7 +148,4 @@ main {
   100% {
     transform: rotate(360deg);
   }
-}
-
-@media screen {
 }
