--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 10px;
+ 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -15,6 +15,15 @@ code {
 
 .body{
   width: 100%;
+}
+
+h1 {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 60px;
+  font-weight: 700;
+  text-shadow: 3px 3px 4px #FDAEAD;
+  text-align: center;
+  margin: 30px
 }
 /*Containers*/
 
@@ -71,6 +80,7 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 
 
 }
