--- a/code/src/index.css
+++ b/code/src/index.css
@@ -7,7 +7,7 @@ body {
   font-weight: 400;
   background-color: #F3B1AF;
   margin: 0;
-  padding: 0;
+  padding-bottom: 4rem;
   font-family: roboto mono, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -25,18 +25,23 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   padding-top: 3rem;
 }
 
 h1 {
   font-size: 32px;
   font-weight: 100;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .content-area {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 300px;
+  padding: 0;
 }
 
 
@@ -227,4 +232,23 @@ textarea {
 {
   transform: scale( .75 );
 }
+}
+
+
+@media (max-width: 767px) {
+
+  .form {
+    width: 300px;
+    margin-bottom: 0.8rem;
+  }
+
+  .content-area {
+    margin-left: 0.7rem;
+    margin-right: 1rem;
+  }
+
+  .thought-item {
+    width: 300px;
+    margin-bottom: 0.8rem;
+  }
 }
