--- a/code/src/index.css
+++ b/code/src/index.css
@@ -116,6 +116,10 @@ code {
   border-left: 5px solid rgb(212, 88, 196);
   animation: spinner infinite 0.3s;
 }
+.liked-this {
+  margin: 0;
+}
+
 @keyframes spinner {
   0% {
     transform: rotate(0);
