--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,14 +3,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-    font-weight: 700;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image:url(./assets/happy.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-color: rgba(246, 238, 238, 0.25);
+  background-color: rgb(250, 224, 226);
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 .thought_wrapper{
@@ -26,11 +26,15 @@ body {
 }
 .add-thought_input-field {
   width: calc (50vw 50px);
-  height: 60px;
+  height: 50px;
   font-family: "Inconsolata", monospace;
   padding: 10px;
-  margin: 10px auto 5px auto;
-  resize: none;
+  margin: 10px 10px 10px 10px;
+  resize: none; 
+}
+
+.characters{
+  font-size:xx-small;
 }
 .add-thought_button{
   border: none;
@@ -44,23 +48,85 @@ body {
 
 .add-thought_button:hover {
   cursor: pointer;
-  box-shadow: 0 0 10px rgba(255, 173, 173, 0.6);
+  box-shadow: 0 0 10px rgba(250, 158, 158, 0.6);
 }
 
 .add-thought_button:active {
   background: rgba(255, 173, 173, 0.8);
 }
+.like-button{
+  border: 1px solid white;
+  color: #f53536;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  transition: ease-in 0.1s;
+  cursor: pointer;
+  box-sizing: border-box;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.like-button:disabled {
+  border: 2px solid white;
+  background-color: #f53536;
+  color: white;
+}
+
+.btn-border {
+  border-radius: 50%;
+  border: 2px solid #f53536;
+  box-sizing: border-box;
+}
+
+.like-button:hover:not(:disabled) {
+  border: 1px solid white;
+  color: white;
+  background-color: #f53536;
+  transform: scale(1.1);
+}
+
+.likes-info-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: baseline;
+  align-items: center;
+}
+
+.like-button-wrapper {
+  margin-left: -9px;
+}
+
+.spacing-styling {
+  padding-left: 8px;
+}
+
+.like-icon {
+  display: flex;
+  align-self: center;
+  justify-self: center;
+  margin-top: 9px;
+}
+
+.symbols-counter,
+.sub-text-styling {
+  font-size: 12px;
+  margin-top: 0;
+  color: var(--theme-color);
+  margin-bottom: 0;
 }
 .date{
   font-style: italic;
 }
-
 .loading-overlay{
-
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .loading-spinner{
   width: 50px;
@@ -68,7 +134,7 @@ code {
   border:5px solid lightgray;
   border-radius: 50%;
   border-left: 5px solid #ffff;
-  animation: spinner infinite 0,5s;
+  animation: spinner infinite 0.5s;
 }
 
 @keyframes spinner {
