--- a/code/src/index.css
+++ b/code/src/index.css
@@ -36,7 +36,7 @@ code {
   font-size: 17px;
 }
 .new-thought-input {
-  height: 35px;
+  height: 50px;
 }
 .new-thought-button {
   border: none;
@@ -117,7 +117,9 @@ code {
   animation: spinner infinite 0.3s;
 }
 .liked-this {
-  margin: 0;
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: 13px;
 }
 
 @keyframes spinner {
