--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 1200px;
 }
 
 code {
@@ -20,18 +21,35 @@ code {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-content: center; */
   align-items: center;
   margin: 25px;
+  word-break: break-word;
 }
 
-.form-container {
+form {
   display: flex;
   flex-direction: column;
-  align-content: center;
-  border: solid 3px black;
+  justify-content: center;
+  align-items: center;
+  border: solid 1px black;
   padding: 20px;
   box-shadow: 5px 5px;
+  /* max-width: 350px;
+  width: 70%; */
+}
+
+textarea {
+  padding: 10px;
+  margin: 10px;
+  min-height: 60px;
+  width: 90%;
+}
+
+.submit-button {
+  background-color: rgba(255, 0, 0, 0.4);
+  border-radius: 20px;
+  border: none;
+  padding: 10px;
 }
 
 .new-container {
@@ -41,13 +59,20 @@ code {
   align-content: center;
   grid-gap: 20px;
   margin-top: 20px;
+  width: 90%;
   max-width: 400px;
 }
 
 .new-thoughts-card {
   /* display: flex;
   flex-direction: column; */
-  border: solid 3px black;
+  border: solid 1px black;
   padding: 20px;
   box-shadow: 5px 5px;
+}
+
+.like-button {
+  border: none;
+  border-radius: 50%;
+  background-color: rbga(0, 0, 0, 0.26);
 }
