--- a/code/src/Components/newThoughtInput.css
+++ b/code/src/Components/newThoughtInput.css
@@ -16,6 +16,10 @@ textarea {
   font-size: 20px;
 }
 
+::placeholder {
+  font-size: 12px;
+}
+
 .new-thought-input__button {
   color: #000;
   background-color: #ffadad;
