--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,32 @@
+@import url('https://fonts.googleapis.com/css2family=Oxygen+Mono&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'PrimaSans BT';
+  font-family: 'Oxygen Mono', monospace;
   background-color: #ffadad;
+}
+
+header {
+  width: 100%;
+  /* display: flex;
+  justify-content: center; */
+  padding: 0 10%;
+}
+
+h1 {
+  font-size: 4em;
+  color: #ffff;
+  margin-bottom: 5%;
 }
 
 button {
   border: none;
 }
 
+.app__wrapper {
+  display: grid;
+  justify-content: center;
+}
