--- a/code/src/index.css
+++ b/code/src/index.css
@@ -66,7 +66,7 @@ code {
   
 }
 
-.thought-btn:hover, .heart-btn-loved:hover {
+.thought-btn:hover, .heart-btn-loved:hover, .thought-btn:focus, .heart-btn-loved:focus  {
   background-color: rgb(255, 122, 122);
   cursor: url(https://cur.cursors-4u.net/symbols/sym-1/sym49.cur), auto;
 }
@@ -124,7 +124,7 @@ code {
   background-color: rgb(234, 234, 234);
 }
 
-.heart-btn-unloved:hover {
+.heart-btn-unloved:hover, .heart-btn-unloved:focus {
   background-color: rgb(165, 165, 165);
   cursor: url(https://cur.cursors-4u.net/symbols/sym-1/sym49.cur), auto;
 }
