--- a/code/src/components/HappyForm.css
+++ b/code/src/components/HappyForm.css
@@ -1,30 +1,35 @@
-.happyThoughtInput{
-    
+.happyThoughtInput{    
+    font-family: 'Roboto', sans-serif;
     background-color: #efefef;
     padding: 10px;
     width: 100%;
+    min-width: 300px;
+    max-width: 500px;
     height: 100%;
     border: 1px solid #000;
     box-shadow: 5px 5px #000;
     align-items: center;
-
 }
 
 .happyThoughtButton{
+    font-family: 'Roboto', sans-serif;
     color: #000; 
     background-color: #ffadad;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 14px; 
-    padding: 10px; 
+    padding: 10px 15px; 
     border-radius: 20px;
-    
+ 
 }
 
 
 textarea {
     resize: none;
     width: 100%;
-    margin: 10px;
     font-size: 18px;
+    font-family: 'Oxygen Mono';
+    font-size: 12px;
+    padding: 10px;
+    margin: 10px 0;
 
 }
