--- a/code/src/components/Main/Main.css
+++ b/code/src/components/Main/Main.css
@@ -1,8 +1,9 @@
 .spinner__container {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 100px;
 }
