--- a/code/src/components/ThoughtsList/ThoughtsList.css
+++ b/code/src/components/ThoughtsList/ThoughtsList.css
@@ -6,6 +6,16 @@
   box-shadow: 8px 8px black;
   display: grid;
   grid-template-rows: 1fr auto;
+  animation: fadeIn linear 1s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .thoughts__message {
